# BrianMass

./: README.md  architecture_context.md  claude_code_v3_spec_v1_1.md  custom_agent_schema.md  implementation_tasks.md  pyproject.toml  strands_agentcore_mapping.md
.brainmass/agents/: sdlc-coder.md  sdlc-design-doc.md  sdlc-ears-spec.md  sdlc-journey-mapper.md  sdlc-tdd-enforcer.md
.brainmass/workflow/: WORKFLOW_DESIGN_PLAN.md
.claude/: settings.local.json
.hypothesis/constants/: 0029e3685988a9e1  004e722d2b39195a  006d29edf1dcd5e3  016ea8820db8010c  01831d6f995783ed  0201cfa616c06a93  02361c7d2d1bf455  0259594f63b2a1f6  025c876b6e0ab5a5  026551f7ae48804c  02decf39535a7340  032bb05e75ff8d56  03a0bc33c3be41ac  03ab1e6e6bb21915  03fee8ff5d04aa33  041b82baf95116f0  0422c269544453d1  04530f756c73f4ce  046729944c8d5fe8  047bf956bb38ba3b  0508012dc8a93663  0570a7c52cd987f9  05f4e8f4e3a08397  0628f2618034526e  068c9e16d4886008  069f1bbe681b4325  06c88ddd0840a021  06e5065547bcc6f6  0736e2d4acddd01a  07475514dc0bbadb  075aa0dd31e12c03  0768246cba53164c  076bc773cb96ceb4  07b8446a052edf99  07eec82a4f752401  08a45b14b7a1aa82  08d93ec5d0ff0314  09482feeaa124f43  096e9695fd18eafb  09ae28b390a241d0  (+842 more)
.hypothesis/tmp/: tmp15cus3lh  tmp2tbehlvw  tmp343vzuvx  tmp4l8embb9  tmp4su8sk22  tmp6biy2htk  tmp6v84h53j  tmp_h5rz5av  tmpa0y1z8u2  tmpeaybcwn6  tmphaqgkdr5  tmpjxadi83z  tmpjzuopgvy  tmpk2600_z4  tmpk55sshlq  (+15 more)
evals/: __init__.py  eval_suite.py  hard_eval_runtime.py  hard_eval_suite.py
scripts/: run_hard_evals.py  run_hard_evals_live.py  task_qa_monitor.py
src/: __init__.py
(+290 files in other folders)
